tests/errors/validation/op-inside-namespace.fn
---
Description: Operator declared inside a namespace
Expected: FN2000
---

namespace BadNs
{
    op +(a: i32, b: i32) -> i32
    {
        return a + b
    }
}

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
